<resources>
    <string name="app_name">HealthCare App</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="height_cm">Height (cm)</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">phone number</string>
    <string name="password">Password</string>
    <string name="signup">SignUp</string>
    <string name="city">City</string>
    <string name="login">Login</string>
    <string name="welcome_in_our_health_app">Welcome in Our Health App</string>
    <string name="home">Home</string>
    <string name="blood_donation">Blood Donation</string>
    <string name="lungs_mri">Lungs MRI</string>
    <string name="disease_detection">Disease Detection</string>
    <string name="hospitals_location">Hospitals Location</string>
    <string name="name">Name</string>
    <string name="common">Common</string>
    <string name="contact">Contact</string>
    <string name="the_address_of_the_place_of_donation">The address of the place of donation</string>
    <string name="cancel">cancel</string>
    <string name="upload_image">Upload image</string>
    <string name="upload_lungs_mri">Upload Lungs MRI</string>
    <string name="diagnosis_is">diagnosis of your MRI :</string>
    <string name="normal">NORMAL</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="blood">
        <item>O-</item>
        <item>O+</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
</resources>