<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_svg"
    android:orientation="vertical"
    tools:context=".fragments.LungFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/upload_lungs_mri"
        android:textSize="35sp"
        android:textColor="#00BCD4"
        android:textStyle="bold"

        />

    <ImageView
        android:id="@+id/mriImage"
        android:layout_marginTop="16dp"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_baseline_image_24"
       />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/uploadImage"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00BCD4"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/upload_image"
        android:textAllCaps="false"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diagnosis_is"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/diagn_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:visibility="gone"
        />
</LinearLayout>