<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_svg"
    tools:context=".activites.SignUpActivity">
    <ScrollView
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/fisrtName_edt"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_marginStart="16dp"
                android:background="@drawable/edittext_de"
                android:hint="@string/first_name"
                android:padding="7dp"/>

            <EditText
                android:id="@+id/lastName_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/edittext_de"
                android:hint="@string/last_name"
                android:layout_marginEnd="16dp"
                android:inputType="textPersonName"
                android:padding="7dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/age_edt"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/edittext_de"
                android:hint="Age"
                android:inputType="number"
                android:padding="7dp"/>

            <EditText
                android:id="@+id/city_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/edittext_de"
                android:hint="@string/city"
                android:layout_marginEnd="16dp"
                android:padding="7dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/height_edt"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/edittext_de"
                android:hint="@string/height_cm"
                android:inputType="number"
                android:padding="7dp"/>

            <EditText
                android:id="@+id/weight_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/edittext_de"
                android:hint="@string/weight_kg"
                android:inputType="number"
                android:layout_marginEnd="16dp"
                android:padding="7dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/blood_type_sp"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/edittext_de"
                android:inputType="number"
                />

            <Spinner
                android:id="@+id/gender_sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/edittext_de"
                android:hint="@string/weight_kg"
                android:inputType="number"
                android:layout_marginEnd="16dp"
               />

        </LinearLayout>
        <EditText
            android:layout_marginTop="16dp"
            android:id="@+id/email_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/edittext_de"
            android:hint="@string/e_mail"
            android:layout_marginEnd="16dp"
            android:inputType="textEmailAddress"
            android:padding="14dp"/>

        <EditText
            android:layout_marginTop="16dp"
            android:id="@+id/phone_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/edittext_de"
            android:hint="@string/phone_number"
            android:layout_marginEnd="16dp"
            android:inputType="phone"
            android:padding="14dp"/>
        <EditText
            android:layout_marginTop="16dp"
            android:id="@+id/password_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/edittext_de"
            android:hint="@string/password"
            android:layout_marginEnd="16dp"
            android:inputType="textPassword"
            android:padding="14dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#00BCD4"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>
    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>