<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_svg"
    tools:context=".activites.StartActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_in_our_health_app"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="#00BCD4"
            android:textStyle="bold"

            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn_starter"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#00BCD4"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_btn_starter"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#00BCD4"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>