<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_svg"
    tools:context=".activites.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/edittext_de"
            android:hint="@string/e_mail"
            android:layout_marginEnd="16dp"
            android:inputType="textEmailAddress"
            android:padding="14dp"/>

        <EditText
            android:layout_marginTop="16dp"
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/edittext_de"
            android:hint="@string/password"
            android:layout_marginEnd="16dp"
            android:inputType="textPassword"
            android:padding="14dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#00BCD4"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>