<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="10dp"
    app:cardMaxElevation="3dp"
    android:padding="14dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/fisrtName_edt_do"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/edittext_de"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:padding="7dp" />

            <EditText
                android:id="@+id/lastName_edt_do"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_de"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:padding="7dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/age_edt_do"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/edittext_de"
                android:hint="Age"
                android:layout_marginEnd="16dp"
                android:inputType="number"
                android:padding="7dp" />


        </LinearLayout>
        <Spinner
            android:id="@+id/blood_type_do"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/edittext_de"
            android:inputType="number"
            />

        <Spinner
            android:id="@+id/gender_do"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/edittext_de"
            android:hint="@string/weight_kg"
            android:inputType="number"
            android:layout_marginEnd="16dp"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/blood_type_sp"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/edittext_de"
                android:inputType="number" />

            <Spinner
                android:id="@+id/gender_sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_de"
                android:hint="@string/weight_kg"
                android:inputType="number" />

        </LinearLayout>

        <EditText
            android:id="@+id/address_do"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edittext_de"
            android:hint="@string/the_address_of_the_place_of_donation"
            android:inputType="textEmailAddress"
            android:padding="14dp" />

        <EditText
            android:id="@+id/phone_edt_do"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edittext_de"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">
        <Button
            android:id="@+id/add_btn"
            android:layout_width="150dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp"
            android:text="Add"
            android:layout_marginBottom="8dp"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="150dp"
            android:layout_height="37dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>